got derby DAOs working, resturctured a bit to allow easy switch from derby to xml DAOs