@@ -1,8 +1,12 @@
 package datamanagement.daos.derby;
 
 import java.sql.Connection;
+import java.sql.ResultSet;
+import java.sql.SQLException;
+import java.sql.Statement;
 
-import datamanagement.entities.IRecord;
+import datamanagement.daos.IStudentDAO;
+import datamanagement.daos.derby.RecordDAO;
 import datamanagement.entities.IStudent;
 import datamanagement.entities.RecordList;
 import datamanagement.entities.Student;
@@ -11,15 +15,16 @@ import datamanagement.entities.StudentProxy;
 
 import java.util.Map;
 import java.util.HashMap;
-import java.util.List;
 
-public class StudentDAO {
+
+
+public class StudentDAO implements IStudentDAO {
 	
 	private static StudentDAO self_ = null;
 	private Connection connection_;
 	
 	private StudentMap studentMap_;
-	private Map<String, StudentMap> unitMap_;
+	private Map<String, StudentMap> subjectMap_;
 
 	
 	
@@ -35,7 +40,7 @@ public class StudentDAO {
 	private StudentDAO() {
 		connection_ = DataManager.getInstance().getConnection();
 		studentMap_ = new StudentMap();
-		unitMap_ = new HashMap<String, StudentMap>();
+		subjectMap_ = new HashMap<String, StudentMap>();
 	}
 
 	
@@ -52,19 +57,58 @@ public class StudentDAO {
 	
 	private IStudent createStudent(Integer id) {
 		IStudent student;
-		return null;
+        String raw = String.format("SELECT * from Students where StudentId = %d", id.intValue());
+        try {
+            Statement sta = connection_.createStatement();
+            ResultSet res = sta.executeQuery(raw);
+            
+            if (res.next()) {
+            	Integer studentId = Integer.valueOf(res.getInt("StudentId"));
+    			String firstName = res.getString("FirstName");
+    			String lastName = res.getString("LastName");
+    			RecordList records = RecordDAO.getInstance().getRecordsByStudent(id);
+    			student = new Student(studentId, firstName, lastName, records);
+            }
+            else {
+        		throw new RuntimeException("DBMD: createStudentProxy : student not in file");            	
+            }
+        }
+        catch (SQLException sqle) {
+        	printSQLException(sqle);
+        	throw new RuntimeException("StudentDAO : SQLException thrown creating Student");
+        }
+		return student;
 	}
 
 	
 	
 	private IStudent createStudentProxy(Integer id) {
-		return null;
+		StudentProxy proxy;
+        String raw = String.format("SELECT FirstName, LastName from Students where StudentId = %d", id.intValue());
+        try {
+            Statement sta = connection_.createStatement();
+            ResultSet res = sta.executeQuery(raw);
+            
+            if (res.next()) {
+    			String firstName = res.getString("FirstName");
+    			String lastName = res.getString("LastName");
+    			proxy = new StudentProxy(id, firstName, lastName, this);
+            }
+            else {
+        		throw new RuntimeException("DBMD: createStudentProxy : student not in file");            	
+            }
+        }
+        catch (SQLException sqle) {
+        	printSQLException(sqle);
+        	throw new RuntimeException("StudentDAO : SQLException thrown creating StudentProxy");
+        }
+		return proxy;
 	}
 
 	
 	
-	public StudentMap getStudentsByUnit(String unitCode) {
-		StudentMap studentMap = unitMap_.get(unitCode);
+	public StudentMap getStudentsBySubject(String subjectCode) {
+		StudentMap studentMap = subjectMap_.get(subjectCode);
 		
 		if (studentMap != null) {
 			return studentMap;
@@ -72,18 +116,42 @@ public class StudentDAO {
 		
 		studentMap = new StudentMap();
 		IStudent student;
-		RecordList unitRecords = RecordDAO.getInstance().getRecordsByUnit(unitCode);
 		
-		for (IRecord S : unitRecords) {
-			student = createStudentProxy(new Integer(S.getStudentId()));
-			Integer studentId = student.getID();
-			studentMap.put(studentId, student);
-		}
-		
-		unitMap_.put(unitCode, studentMap);
+        String raw = String.format("SELECT StudentId from Records where SubjectCode ='%s'", subjectCode);
+        try {
+            Statement sta = connection_.createStatement();
+            ResultSet res = sta.executeQuery(raw);
+            
+            while (res.next()) {
+            	Integer studentId = Integer.valueOf(res.getInt("StudentId"));
+    			student = createStudentProxy(studentId);
+    			studentMap.put(studentId, student);
+    			
+    			subjectMap_.put(subjectCode, studentMap);
+            }
+        }
+        catch (SQLException sqle) {
+        	printSQLException(sqle);
+        	throw new RuntimeException("StudentDAO : SQLException thrown getting Student by Subject");
+        }
+
+		subjectMap_.put(subjectCode, studentMap);
 		return studentMap;
 	}
 	
+
 	
+	public void printSQLException (SQLException sqle) {
+        while (sqle != null) {
+            System.err.println("\n----- SQLException -----");
+            System.err.println("  SQL State:  " + sqle.getSQLState());
+            System.err.println("  Error Code: " + sqle.getErrorCode());
+            System.err.println("  Message:    " + sqle.getMessage());
+            // for stack traces, refer to derby.log or uncomment this:
+            //e.printStackTrace(System.err);
+            sqle = sqle.getNextException();
+        }
+	}
+
 
 }
